# gln

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/io/: csv.rs
src/model/: config.rs  context_func.rs  gate.rs  gln.rs  gln_model.rs  layer.rs  math.rs  mod.rs  neuron.rs
src/optimize/: grad.rs  mod.rs  optimizer.rs
src/utils/: data_type.rs  math.rs  mod.rs
tests/: gln_test.rs
