[package]
name = "gln"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = { version = "0.15.0", features = ["openblas-system"] } # どの features を使うか後で考える

[dev-dependencies]
mockall = "0.11.2"
